--- a/index.html
+++ b/index.html
@@ -4,13 +4,77 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    <link rel="stylesheet" src="assets/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <title>Weather Dashboard</title>
 </head>
 <body>
-    
+    <div>
+        <!-- header-->
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">Weather Dashboard</h1>
+            </div>
+          </div>
+        
+        <!-- search -->
+        <div class="container col-md-4">
+            <div>
+                <h2>Search for a city:</h2> <br>
+                <input type="text" id="city-name" placeholder="Ex: New York"><br>
+                <button type="submit" class="btn btn-primary">Search</button>
+            </div>
+            <div class="list-group col-md-6">
+                <button type="button" class="list-group-item list-group-item-action active">
+                    Recent city
+                </button>
+                <button type="button" class="list-group-item list-group-item-action">Recent city</button>
+                <button type="button" class="list-group-item list-group-item-action">Recent city</button>
+                <button type="button" class="list-group-item list-group-item-action">Recent city</button>
+                <button type="button" class="list-group-item list-group-item-action" disabled>Recent city</button>
+              </div>
+        </div>
+
+        <!-- cards -->
+        <main class="container">
+            <h2>Weather</h2>
+            <!-- results for weather data -->
+            <div class="weather row gx-2">
+              <div class="col">
+                <div class="card" style="width: 30vw">
+                  <h5 class="card-title p-2">Date</h5>
+                  <img
+                    src="http://openweathermap.org/img/wn/10d@4x.png"
+                    class="card-img-top"
+                    alt="Weather description"
+                  />
+                  <div class="card-body">
+                    <h3 class="card-title">Weather Label</h3>
+                    <p class="card-text">High Temp Low Temp</p>
+                    <p class="card-text">HighFeels like</p>
+                    <p class="card-text">Pressure</p>
+                    <p class="card-text">Humidty</p>
+                    <p class="card-text">UV Index</p>
+                    <p class="card-text">Precipitation</p>
+                    <p class="card-text">Dew Point</p>
+                    <p class="card-text">Wind speed and direction</p>
+                    <p class="card-text">Sunrise</p>
+                    <p class="card-text">Sunset</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </main>
+
+
+    </main>
+
+
+
+
+
+
+    <footer>
+        <p>Made with HTML and CSS. Powered by OpenWeather Map.</p>
+    </footer>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="./assets/js/script.js"></script>
 </html>
