updated JS, added fetch for daily weather

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h2 class="card-title">City (Date) </h2>
-                                <p class="card-text">Temp</p>
-                                <p class="card-text">Humidty</p>
-                                <p class="card-text">UV Index</p>
-                                <p class="card-text">Wind</p>
+                                <p class="card-text">Temp: <span id="temp1"></span></p>
+                                <p class="card-text">Humidty: <span id="hum1"></span></p>
+                                <p class="card-text">UV Index: <span id="uv1"></span></p>
+                                <p class="card-text">Wind: <span id="wind1"></span></p>
                         </div>
                       </div>
                     </div>
