--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <input type="text" class="form-control" id="city-search" placeholder="ex: Atlanta"><br>
                     <button type="submit" class="btn btn-primary">Search</button>
                 </div>
-                <div class="list-group"> <!-- append recent searched cities using JS-->
-                    <button type="button" class="list-group-item list-group-item-action">Recent city</button>
+                <div class="list-group" id="search-history"> <!-- append recent searched cities using JS-->
+                    <!-- <button type="button" class="list-group-item list-group-item-action"></button> -->
                 </div>
             </div>
             
