--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="card mb-3">
                     <div class="row no-gutters">
                       <div class="col-md-4">
-                        <img src="http://openweathermap.org/img/wn/10d@4x.png" id="icon" class="card-img" alt="Weather description">
+                        <img src="https://openweathermap.org/img/wn/10d@4x.png" id="icon" class="card-img" alt="Weather description">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
